2019. 1.17. Renamed model files following the change of default suffix. [example]
2019. 1.16. Abolished ZMULTISHAPE3D_SUFFIX and modified zMShape3DReadFile and zMShape3DWriteFile. [zeo_mshape]
2019. 1.15. Extended zShape3D to abstract zNURBS3D. [zeo_shape]
2019. 1.15. Added zeo_prim_nurbs for class abstraction. [zeo_prim, zeo_prim_nurbs]
2019. 1.15. Added zNURBS3DToPH. [zeo_nurbs]
2019. 1.15. Debugged zNURBS3DVec and zNURBS3DVecNorm. [zeo_nurbs]
2019. 1.15. Debugged zNURBS3D1Knot0 to zNURBS3D1KnotS, and modified zNURBS3DKnotNormalize. [zeo_nurbs]
2019. 1.15. Debugged _zNURBS3DKnotInit and _zNURBS3DSeg. [zeo_nurbs]
2019. 1.15. Modified zNURBS3DAlloc to check consistency between the number of control points and dimension. [zeo_errmsg, zeo_nurbs]
2019. 1.15. Changed specification of zNURBS3DKnotNum. [zeo_nurbs]
2019. 1.14. Debugged _zNURBS3DSeg. [zeo_nurbs]
2019. 1.14. Modified _zNURBS3DBasis and _zNURBS3DBasisDiff. [zeo_nurbs]
2019. 1.12. Added zNURBS3DCopy, zNURBS3DClone, zNURBS3DMirror, zNURBS3DXfer and zNURBS3DXferInv. [zeo_nurbs, zeo_errmsg]
2019. 1.12. Renamed zNURBS3DVecNN to zNURBS3DClosest. [zeo_nurbs]
2019. 1.11. Added zNURBS3DFWrite and zNURBS3DFRead. [zeo_nurbs]
2019. 1.11. Added zNURBS3DInit and modified zNURBS3DDestroy. [zeo_nurbs]
2019. 1.11. Added zNURBS3DSetSliceNum. [zeo_nurbs]
2019. 1.11. Modified specification of zNURBS3DKnotSlice, zNURBS3D1KnotSlice. [zeo_nurbs]
2019. 1.11. Added property of number of slices in zNURBS3D. [zeo_nurbs]
2019. 1.11. Renamed zeo_nurbs3d to zeo_nurbs. [zeo_nurbs, zeo]
2019. 1.10. Renamed zEPRotVec to zEPRotVec3D. [zeo_ep]
2019. 1.10. Debugged zMat3DToEP. [zeo_errmsg, zeo_ep]
2019. 1. 9. Debugged zAngVelToZYXVelSC and zAngVelToZYZVelSC. [zeo_vec3d]
2019. 1. 9. Renamed zVec3DAng/ZYX/ZYZVel2ZYX/ZYZ/AngVel to zAng/ZYX/ZYZToZYX/ZYZ/AngVel. [zeo_vec3d]
2019. 1. 9. Abolished ZVEC2DZERO, ZVEC2DX, ZVEC2DY, ZMAT2DZERO and ZMAT2DIDENT. [zeo_vec2d, zeo_mat2d]
2019. 1. 9. Modified specification of zMat2DDyad. [zeo_mat2d]