@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.2.1
+VERSION=1.2.2
 
 DEPENDENCY="zeda=1.1.3;zm=1.1.4"
