@@ -1,3 +1,7 @@
+2019. 1.18. Added zMat3DIsTol and zMat3DIsTiny. [zeo_mat3d]
+2019. 1.18. Reimplemented _zMulInvMat3DVec3D, zMulInvMat3DVec3D and zMulInvMat3DMat3D. [zeo_mat3d]
+2019. 1.18. Added _zMat3DBalancingMinMaxIndex, _zMat3DRowBalancingScale, _zMat3DColBalancingScale, _zMat3DRowBalancing, _zMat3DColBalancing and _zMat3DInv, and reimplemented zMat3DInv. [zeo_mat3d]
+2019. 1.18. Added zVec3DDem and zVec3DDemDRC. [zeo_vec3d]
 2019. 1.17. Renamed model files following the change of default suffix. [example]
 2019. 1.16. Abolished ZMULTISHAPE3D_SUFFIX and modified zMShape3DReadFile and zMShape3DWriteFile. [zeo_mshape]
 2019. 1.15. Extended zShape3D to abstract zNURBS3D. [zeo_shape]
